--- a/.github/workflows/PublicToolPackage.yml
+++ b/.github/workflows/PublicToolPackage.yml
@@ -2,10 +2,10 @@ name: Build and public Tool
 on:
   push:
     branches:
-      - Final
+      - master
   pull_request:
     branches:
-      - Final
+      - master
 jobs:
   build:
     runs-on: windows-2019
