--- a/Native.Csharp.Sdk/Native.Csharp.Sdk.csproj
+++ b/Native.Csharp.Sdk/Native.Csharp.Sdk.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFrameworks>net45;netcoreapp3.1;netstandard2.0</TargetFrameworks>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Jie2GG</Authors>
-    <Description>Native SDK ,酷Q机器人SDK</Description>
+    <Description>酷Q机器人Native Csharp SDK</Description>
     <Company>Jie2GG</Company>
     <RepositoryUrl>https://github.com/Jie2GG/Native.Csharp.Frame</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Jie2GG/Native.Csharp.Frame</PackageProjectUrl>
-    <Version>2.6.1.12121</Version>
+    <Version>2.6.1.1216</Version>
     <Copyright>MIT</Copyright>
     <PackageIcon>Logo.jpg</PackageIcon>
     <PackageIconUrl />
